kubernetes/adguardhome/adguardhome/external/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  - name: metrics
    targetPort: metrics
    port: 9617
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  clusterIP: None
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
