kubernetes/adguardhome/adguardhome/external/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguardhome
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-external
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - adguard.yuha0.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dns-query
    backendRefs:
    - name: http-external
      port: 80
