kubernetes/adguardhome/adguardhome/external/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguardhome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: "ddns.yuha0.com"
spec:
  ingressClassName: nginx-external
  rules:
  - host: adguard.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: http
            port:
              number: 80
        path: /dns-query
        pathType: Prefix
  tls:
    - hosts:
      - adguard.yuha0.com
      secretName: adguard-server-tls
